New API to fetch completion
- call DB to fetch completion in order to know if question has been done
